--- a/index.html
+++ b/index.html
@@ -5,17 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>동원그룹</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/slick-theme.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media_style.css">
+    <link rel="stylesheet" href="css/jquery.bxslider.css">
     <script src="script/jquery-3.6.4.min.js"></script>
-    <script src="script/jquery-ui.min.js"></script>
     <script src="script/main.js" defer></script>
-    <script src="script/slick.js"></script>
-    <script src="script/slick.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="script/jquery.bxslider.js"></script>
 </head>
 <body>
     <!-- headear -->
@@ -184,18 +179,11 @@
             <section id="slogan" class="sect">
                 <h2 class="hidden">동원 슬로건</h2>
 
-                <ul class="slogantext">
+                <ul class="slogantext bxslider">
                     <li class="slogan1">새로운 가치를 창조하는<br> 사회 필요 기업이 되겠습니다.</li>
                     <li class="slogan2">바다의 무한한 가치를<br> 식탁으로 전합니다.</li>
                     <li class="slogan3">바다를 넘어 전세계에<br> 동원의 가치를 알리겠습니다.</li>
                 </ul>
-
-                <!-- 슬로건 넘기는 버튼 -->
-                <form id="sbtn">
-                    <button type="button"><img src="icon/left.svg" alt="이전 슬로건보기"></button>
-                    <button type="button"><img src="icon/right.svg" alt="다음 슬로건보기"></button>
-                </form>
-                <!-- //슬로건 넘기는 버튼 -->
 
                 <!-- 슬로건 페이지 넘어가기 -->
                 <div id="spagedot">
