--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <!-- contents start -->
         <!-- 페이지 넘어가기 -->
         <div id="pagedot">
-            <a href="#"><div class="pdot"></div><span class="hidden">메인 첫번째 섹션이동</span></a>
+            <a href="#" class="on"><div class="pdot"></div><span class="hidden">메인 첫번째 섹션이동</span></a>
             <a href="#"><div class="pdot"></div><span class="hidden">메인 두번째 섹션이동</span></a>
             <a href="#"><div class="pdot"></div><span class="hidden">메인 세번째 섹션이동</span></a>
             <a href="#"><div class="pdot"></div><span class="hidden">메인 네번째 섹션이동</span></a>
@@ -566,7 +566,7 @@
                     <li><a href="#">이메일무단수집거부</a></li>
                     <li><a href="#">이용약관</a></li>
                     <li><a href="#">고객문의</a></li>
-                    <li><a href="#">Family Site +</a></li>
+                    <li><a href="#" class="noMove">Family Site +</a></li>
                 </ul>
             </nav>
         </div>
@@ -611,8 +611,7 @@
                     <li><a href="#">CAPSEN</a></li>
                 </ul>
             </div>
-
-            <a href="#"><img src="icon/cross.svg" alt="패밀리사이트 닫기"></a>
+            <a href="#" class="noMove"><img src="icon/cross.svg" alt="패밀리사이트 닫기"></a>
         </div>
         <!-- //family site -->
 
