--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                 </li>
                 <li><a href="#">사업 영역<img src="icon/downarrow.svg" alt="사업영역 세부메뉴 더보기"></a>
                     <ul class="submenu1">
-                        <li><a href="#">Ocean & Logistics</a></li>
-                        <li><a href="#">Food Culture</a></li>
-                        <li><a href="#">Living & Finance</a></li>
-                        <li><a href="#">Global</a></li>
+                        <li><a href="sub1.html">Ocean & Logistics</a></li>
+                        <li><a href="sub1.html">Food Culture</a></li>
+                        <li><a href="sub1.html">Living & Finance</a></li>
+                        <li><a href="sub1.html">Global</a></li>
                     </ul>
                 </li>
                 <li><a href="#">정도 경영<img src="icon/downarrow.svg" alt="정도경영 세부메뉴 더보기"></a>
