--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- headear -->
     <header>
         <!-- logo -->
-        <h1><a href="#" class="logo"><img src="icon/mainlogo.svg" alt="동원"></a></h1>
+        <h1><a href="index.html" class="logo"><img src="icon/mainlogo.svg" alt="동원"></a></h1>
         <!-- //logo -->
 
         <!-- menu -->
