--- a/sub1.html
+++ b/sub1.html
@@ -148,7 +148,7 @@
 
         <!-- 검색창 -->
         <div class="search">
-            <a href="#"><img src="icon/cross-w.svg" alt="검색닫기"></a>
+            <a href="#" class="noMove"><img src="icon/cross-w.svg" alt="검색닫기"></a>
             <form class="searchbox">
                 <input type="search" name="sh" aria-label="검색내용입력">
                 <button type="button"><img src="icon/search.svg" alt="검색하기"></button>
