--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                 </li>
                 <li><a href="#">Media Hub<img src="icon/downarrow.svg" alt="media hub 세부메뉴 더보기"></a>
                     <ul class="submenu1">
-                        <li><a href="#">동원News</a></li>
-                        <li><a href="#">동원Now</a></li>
-                        <li><a href="#">동원Food</a></li>
-                        <li><a href="#">동원Tube</a></li>
+                        <li><a href="sub2.html">동원News</a></li>
+                        <li><a href="sub2.html">동원Now</a></li>
+                        <li><a href="sub2.html">동원Food</a></li>
+                        <li><a href="sub2.html">동원Tube</a></li>
                     </ul>
                 </li>
                 <li><a href="#">인재 채용<img src="icon/downarrow.svg" alt="인재채용 세부메뉴 더보기"></a>
@@ -108,10 +108,10 @@
                 </li>
                 <li><a href="#">Media Hub</a>
                     <ul class="submenu">
-                        <li><a href="#">동원News</a></li>
-                        <li><a href="#">동원Now</a></li>
-                        <li><a href="#">동원Food</a></li>
-                        <li><a href="#">동원Tube</a></li>
+                        <li><a href="sub2.html">동원News</a></li>
+                        <li><a href="sub2.html">동원Now</a></li>
+                        <li><a href="sub2.html">동원Food</a></li>
+                        <li><a href="sub2.html">동원Tube</a></li>
                     </ul>
                 </li>
                 <li><a href="#">인재 채용</a>
@@ -434,7 +434,7 @@
                 <div id="mtitle">
                     <p>Media Hub</p>
                     <h2>Dongwon <br>Media</h2>
-                    <a href="#" title="동원미디어 내용 더 보러가기">More</a>
+                    <a href="sub2.html" title="동원미디어 내용 더 보러가기">More</a>
                 </div>
                 <!-- //title -->
 
@@ -482,7 +482,7 @@
                 <div id="ntitle">
                     <p>Media Hub</p>
                     <h2>Dongwon <br>News</h2>
-                    <a href="#" title="동원뉴스 내용 더 보러가기">More</a>
+                    <a href="sub2.html" title="동원뉴스 내용 더 보러가기">More</a>
                 </div>
                 <!-- //title -->
 
