--- a/sub1.html
+++ b/sub1.html
@@ -48,10 +48,10 @@
                 </li>
                 <li><a href="#">Media Hub<img src="icon/downarrow.svg" alt="media hub 세부메뉴 더보기"></a>
                     <ul class="submenu1">
-                        <li><a href="#">동원News</a></li>
-                        <li><a href="#">동원Now</a></li>
-                        <li><a href="#">동원Food</a></li>
-                        <li><a href="#">동원Tube</a></li>
+                        <li><a href="sub2.html">동원News</a></li>
+                        <li><a href="sub2.html">동원Now</a></li>
+                        <li><a href="sub2.html">동원Food</a></li>
+                        <li><a href="sub2.html">동원Tube</a></li>
                     </ul>
                 </li>
                 <li><a href="#">인재 채용<img src="icon/downarrow.svg" alt="인재채용 세부메뉴 더보기"></a>
@@ -103,10 +103,10 @@
                 </li>
                 <li><a href="#">Media Hub</a>
                     <ul class="submenu">
-                        <li><a href="#">동원News</a></li>
-                        <li><a href="#">동원Now</a></li>
-                        <li><a href="#">동원Food</a></li>
-                        <li><a href="#">동원Tube</a></li>
+                        <li><a href="sub2.html">동원News</a></li>
+                        <li><a href="sub2.html">동원Now</a></li>
+                        <li><a href="sub2.html">동원Food</a></li>
+                        <li><a href="sub2.html">동원Tube</a></li>
                     </ul>
                 </li>
                 <li><a href="#">인재 채용</a>
